# fairspec-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
dataset/: README.md  pyproject.toml
dataset/fairspec_dataset/: __init__.py  conftest.py  plugin.py
dataset/fairspec_dataset/actions/dataset/: basepath.py  basepath_test.py  merge.py
dataset/fairspec_dataset/actions/file/: copy.py  copy_spec.py  describe.py  infer.py  infer_spec.py  load.py  path.py  prefetch.py  prefetch_spec.py  save.py  temp.py  validate.py  validate_spec.py
dataset/fairspec_dataset/actions/folder/: create.py  create_test.py  temp.py
dataset/fairspec_dataset/actions/resource/: save.py  save_spec.py
dataset/fairspec_dataset/actions/stream/: concat.py  concat_spec.py  load.py  load_spec.py  save.py  save_spec.py
dataset/fairspec_dataset/models/: dataset.py  file.py  file_dialect.py
dataset/fairspec_dataset/plugins/ckan/: __init__.py  plugin.py  plugin_spec.py
dataset/fairspec_dataset/plugins/ckan/actions/dataset/: from_ckan.py  from_ckan_spec.py  from_ckan_test.py  load.py  save.py  to_ckan.py  to_ckan_spec.py
dataset/fairspec_dataset/plugins/ckan/actions/resource/: from_ckan.py  to_ckan.py
dataset/fairspec_dataset/plugins/ckan/actions/table_schema/: from_ckan.py  from_ckan_spec.py  to_ckan.py  to_ckan_spec.py
dataset/fairspec_dataset/plugins/ckan/models/: dataset.py  field.py  organization.py  resource.py  schema.py  tag.py
dataset/fairspec_dataset/plugins/ckan/services/: ckan.py
dataset/fairspec_dataset/plugins/descriptor/: __init__.py  plugin.py  plugin_spec.py  plugin_test.py
dataset/fairspec_dataset/plugins/folder/: __init__.py  plugin.py  plugin_spec.py  plugin_test.py
dataset/fairspec_dataset/plugins/folder/actions/dataset/: load.py  load_spec.py  save.py  save_spec.py
dataset/fairspec_dataset/plugins/github/: __init__.py  plugin.py  plugin_spec.py
dataset/fairspec_dataset/plugins/github/actions/dataset/: from_github.py  load.py  save.py
dataset/fairspec_dataset/plugins/github/actions/resource/: from_github.py
dataset/fairspec_dataset/plugins/github/models/: file.py  license.py  owner.py  repository.py
dataset/fairspec_dataset/plugins/github/services/: github.py
dataset/fairspec_dataset/plugins/zenodo/: __init__.py  plugin.py  plugin_spec.py
dataset/fairspec_dataset/plugins/zenodo/actions/dataset/: from_zenodo.py  load.py  save.py  to_zenodo.py
dataset/fairspec_dataset/plugins/zenodo/actions/resource/: from_zenodo.py  to_zenodo.py
dataset/fairspec_dataset/plugins/zenodo/models/: creator.py  file.py  link.py  metadata.py  record.py
dataset/fairspec_dataset/plugins/zenodo/services/: zenodo.py
dataset/fairspec_dataset/plugins/zip/: __init__.py  plugin.py  plugin_spec.py  plugin_test.py
dataset/fairspec_dataset/plugins/zip/actions/dataset/: load.py  load_spec.py  save.py  save_spec.py  save_test.py
fairspec/: README.md  pyproject.toml
fairspec/fairspec/: __init__.py
table/: README.md  pyproject.toml
table/fairspec_table/: __init__.py  constants.py  plugin.py  settings.py
table/fairspec_table/actions/column/: denarrow.py  denarrow_spec.py  denormalize.py  desubstitute.py  desubstitute_spec.py  helpers.py  helpers_spec.py  inspect.py  inspect_spec.py  narrow.py  narrow_spec.py  normalize.py  parse.py  stringify.py  substitute.py  substitute_spec.py
table/fairspec_table/actions/column/checks/: const.py  const_spec.py  enum.py  enum_spec.py  max_items.py  max_items_spec.py  max_length.py  max_length_spec.py  maximum.py  maximum_spec.py  min_items.py  min_items_spec.py  min_length.py  min_length_spec.py  minimum.py  minimum_spec.py  missing.py  missing_spec.py  multiple_of.py  multiple_of_spec.py  pattern.py  pattern_spec.py  type.py  type_spec.py
table/fairspec_table/actions/column/types/: array.py  array_spec.py  base64.py  base64_spec.py  boolean.py  boolean_spec.py  date.py  date_spec.py  date_time.py  date_time_spec.py  decimal.py  decimal_spec.py  duration.py  duration_spec.py  email.py  email_spec.py  geojson.py  geojson_spec.py  hex.py  hex_spec.py  integer.py  integer_spec.py  list.py  list_spec.py  number.py  number_spec.py  object.py  object_spec.py  time.py  time_spec.py  topojson.py  topojson_spec.py  unknown.py  unknown_spec.py  url.py  url_spec.py  wkb.py  wkb_spec.py  wkt.py  wkt_spec.py
table/fairspec_table/actions/data/: file_dialect.py  file_dialect_spec.py
table/fairspec_table/actions/table/: denormalize.py  file_dialect.py  file_dialect_spec.py  helpers.py  helpers_spec.py  inspect.py  inspect_spec.py  normalize.py  normalize_spec.py  query.py  query_spec.py
table/fairspec_table/actions/table/checks/: key.py  key_spec.py
table/fairspec_table/actions/table_schema/: infer.py  infer_spec.py
table/fairspec_table/helpers/: __init__.py  column.py  file_dialect.py  general.py  schema.py  table.py
table/fairspec_table/models/: __init__.py  cell.py  column.py  data.py  file_dialect.py  frame.py  schema.py  table.py
table/fairspec_table/plugins/arrow/: __init__.py  plugin.py  plugin_spec.py  settings.py
table/fairspec_table/plugins/arrow/actions/table/: load.py  load_spec.py  save.py  save_spec.py
table/fairspec_table/plugins/csv/: __init__.py  plugin.py  plugin_spec.py  settings.py
table/fairspec_table/plugins/csv/actions/table/: load.py  (+3 more)
table/fairspec_table/plugins/inline/: __init__.py  plugin.py
table/fairspec_table/plugins/json/: __init__.py  plugin.py  plugin_spec.py  settings.py
table/fairspec_table/plugins/parquet/: __init__.py  plugin.py  plugin_spec.py
table/fairspec_table/plugins/sqlite/: __init__.py  plugin.py  plugin_spec.py  settings.py
table/fairspec_table/plugins/sqlite/models/: column.py  schema.py
table/fairspec_table/plugins/xlsx/: __init__.py  plugin.py  plugin_spec.py  settings.py
table/fairspec_table/utils/sniffer/: __init__.py  error.py  metadata.py  potential_dialects.py  potential_dialects_test.py  sample.py  score.py  score_spec.py  score_test.py  sniffer.py  sniffer_spec.py  table.py  table_spec.py  table_test.py  uniformity.py  uniformity_spec.py
(+791 files in other folders)
