[project]
name = "fairspec-python"
version = "0.0.0-dev"
requires-python = ">=3.12"

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  ".cache",
]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = [
  "pyproject.toml:project.version",
  "metadata/pyproject.toml:project.version",
]

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
spec = "pytest"
test = "task lint && task type && task spec"
type = "ty check"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
python_files = "*_spec.py"

[tool.ty.rules]
index-out-of-bounds = "ignore"

[tool.uv]
package = false
dev-dependencies = [
  "python-semantic-release==10.5.3",
  "pytest==9.0.2",
  "ruff==0.15.0",
  "taskipy==1.14.1",
  "ty==0.0.15",
  "pytest-recording==0.13.4",
]

[tool.uv.workspace]
members = ["metadata", "dataset", "table", "library", "terminal"]

[tool.uv.sources]
fairspec-metadata = { workspace = true }
fairspec-dataset = { workspace = true }
fairspec-table = { workspace = true }
fairspec-library = { workspace = true }
