[project]
name = "fairspec"
version = "0.0.0-dev"
description = "Fairspec Python is a fast data management framework built on top of the Fairspec standard and Polars DataFrames"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
  "data",
  "dataframe",
  "fair",
  "fairspec",
  "jsonschema",
  "polars",
  "python",
  "quality",
  "tableschema",
  "validation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fairspec-library",
  "fairspec-terminal",
]

[[project.authors]]
name = "Evgeny Karev"

[project.urls]
homepage = "https://github.com/fairspec/fairspec-python"
repository = "https://github.com/fairspec/fairspec-python"

[project.scripts]
fairspec = "fairspec.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
